projects/spats/test/Adapter_Trimming/Negative/YYYR_1.fq
@8
GAACCGGACCGAAGCCCGATTTAATTGGATC
+
=<>>@@@<@@@@>>CEECC#5##########
@9
GAACCGGACCGAAGCCCGATTTAATTGGATC
+
=<>>@@@<@@@@>>CEECC#5##########
@10
GAACCGGACCGAAGCCCGATTTAATTGGATC
+
=<>>@@@<@@@@>>CEECC#5##########
@11
GAACCGGACCGAAGCCCGATTTAATTGGATA
+
=<>>@@@<@@@@>>CEECC#5##########
@12
GAACCGGACCGAAGCCCGATTTAATTAGATC
+
=<>>@@@<@@@@>>CEECC#5##########
@13
GAACCGGACCGAAGCCCGATTTAGATCGGAA
+
=<>>@@@<@@@@>>CEECC#5##########
@14
GAACCGGACCGAAGCCCGAGATCGGAAGAGC
+
=<>>@@@<@@@@>>CEECC#5##########
